_sass/menu.scss
body > header {
  text-align: center;

  .show-menu {
    display: none;
  }

  $navigation__transition: max-height 0.5s ease-in-out;

  nav {
    max-height: 0;
    overflow: hidden;
    transition: $navigation__transition;

    ul {
      padding: 0;
      margin: 0;

      li {
        list-style-type: none;

        a {
          display: block;
          line-height: 2.5;
        }
      }
    }
  }

  .show-menu:checked ~ nav {
    margin-bottom: 1rem;
    max-height: 500px;
    transition: $navigation__transition;
  }

  @media (min-width: $desktop-size) {
    nav {
      max-height: none;
      overflow: auto;
      transition: none;

      ul {
        display: flex;
        flex-wrap: nowrap;

        li {
          flex-grow: 1;
        }
      }
    }
  }
}

